Fix for cutoff on short screens

--- a/src/app.scss
+++ b/src/app.scss
@@ -222,6 +222,7 @@
                 height: 40px;
                 width: 40px;
                 font-size: 2rem;
+                margin-bottom: 2em;
 
                 &:disabled {
                     color: var(--text-color);
